# xkcd-bot

./: .dockerignore  Cargo.toml  docker-compose.yaml
bot/: Cargo.toml  Dockerfile
bot/src/: main.rs
indexer/: Cargo.toml  Dockerfile
indexer/src/: lib.rs  main.rs
src/: lib.rs
