[package]
name = "xkcd-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
meilisearch-sdk = { version = "0.21.2", default-features = true }
tokio = { version = "1.24.1", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model = "0.15"
xkcd = { version = "0.1.0", path = ".." }
