[package]
name = "xkcd-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clokwerk = "0.4.0"
meilisearch-sdk = { version = "0.21.2", default-features = false }
reqwest = { version = "0.11.13", default-features = false, features = [
	"json",
	"rustls-tls",
] }
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
xkcd = { version = "0.1.0", path = ".." }
